--- a/index.html
+++ b/index.html
@@ -40,7 +40,24 @@
         <section class="featured-dishes">
             <h2>Platos Destacados</h2>
             <div class="dish-grid">
-                <!-- Los platos se generarán dinámicamente con JS -->
+                <div class="dish-card">
+                    <img src="img/pollo-kung-pao.jpg" alt="Pollo Kung Pao">
+                    <h3>Pollo Kung Pao</h3>
+                    <p>Pollo picante con cacahuetes y chiles, un clásico de Sichuan</p>
+                    <span class="price">12,50€</span>
+                </div>
+                <div class="dish-card">
+                    <img src="img/cerdo-agridulce.jpg" alt="Cerdo Agridulce">
+                    <h3>Cerdo Agridulce</h3>
+                    <p>Lomo de cerdo crujiente con salsa agridulce</p>
+                    <span class="price">11,90€</span>
+                </div>
+                <div class="dish-card">
+                    <img src="img/rollitos-primavera.jpg" alt="Rollitos de Primavera">
+                    <h3>Rollitos de Primavera</h3>
+                    <p>Crujientes rollitos rellenos de verduras y carne</p>
+                    <span class="price">6,50€</span>
+                </div>
             </div>
         </section>
     </main>
