revision del codigo y funcionalidades

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav class="nav">
             <button class="hamburger">☰</button>
             <ul class="nav-list">
-                <li><a href="carta.html">Carta</a></li>
-                <li><a href="menu.html">Menús</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="reservations.html">Reservas</a></li>
                 <li><a href="chat.html">Chat IA</a></li>
@@ -28,7 +28,7 @@
             <div class="hero-content">
                 <h2>Auténtica Cocina China</h2>
                 <p>Experiencia gastronómica milenaria</p>
-                <a href="#carta" class="btn">Ver Carta</a>
+                <a href="menu.html" class="btn">Ver Carta</a>
             </div>
         </section>
 
