--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,10 @@
             <button class="hamburger">☰</button>
             <ul class="nav-list">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="carta.html">Carta</a></li>
+                <li><a href="menu.html">Menú</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="reservations.html">Reservas</a></li>
+                <li><a href="chat.html">Chat IA</a></li>
             </ul>
         </nav>
     </header>
