--- a/carta.html
+++ b/carta.html
@@ -18,6 +18,7 @@
                 <li><a href="menu.html">Menú</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="reservations.html">Reservas</a></li>
+                <li><a href="chat.html">Chat IA</a></li>
             </ul>
         </nav>
     </header>
