--- a/chat.html
+++ b/chat.html
@@ -87,8 +87,8 @@
         <nav class="nav">
             <button class="hamburger">☰</button>
             <ul class="nav-list">
-                <li><a href="carta.html">Carta</a></li>
-                <li><a href="menu.html">Menús</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="reservations.html">Reservas</a></li>
                 <li><a href="chat.html">Chat IA</a></li>
